# graphics-basics-masks

./: CMakeLists.txt  Projekt 16 - Nakładanie masek.odt  Projekt_GFK_16.fbp  README.md
headers/: App.h  AppGUI.h  AppGUIBase.h
sources/: App.cpp  AppGUI.cpp  AppGUIBase.cpp
